--- a/19022020/index.html
+++ b/19022020/index.html
@@ -55,6 +55,10 @@
       </div>
     </div>
     <h2>Sendung am 19.02.2020</h2>
+    <div class="col-md-6">
+      <iframe src="https://cba.fro.at/442050/embed?&waveform=false" width="100%" height="99"
+        style="border:none; width:100%; height:99px;"></iframe>
+    </div>
     <p><a href="https://helsinki.at/program/98252" target="_blank">Programmhinweis auf der Radio Helsinki Homepage</a>
     </p>
     <p><a href="https://cba.fro.at/442050" target="_blank">Sendung zum Nachhören auf der CBA-Plattform</a></p>
