--- a/nachrichtgesendet/index.html
+++ b/nachrichtgesendet/index.html
@@ -19,7 +19,7 @@
   <meta name="msapplication-config" content="https://happybirthdayshowhelsinki.github.io/favicon/browserconfig.xml">
   <meta name="theme-color" content="#ffffff">
 
-  <title>Kontakt | Happy Birthday Show auf Radio Helsinki mit Christian Steinberger</title>
+  <title>Nachricht gesendet | Happy Birthday Show auf Radio Helsinki mit Christian Steinberger</title>
   <link rel="stylesheet" href="/styles/bootstrap.min.css"
     integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
   <link rel="stylesheet" href="/styles/stylesheet.css">
@@ -75,19 +75,8 @@
         target="_blank">CBA-Plattform</a>.</p>
     <p>Bei Fragen oder Feedback freue ich mich auf ihr E-Mail an: <a
         href="mailto:happybirthdayshowhelsinki@gmail.com">happybirthdayshowhelsinki@gmail.com</a></p>
-    <p>Sie können Ihre Nachricht auch direkt hier hinterlassen. Die E-Mail Adresse ist nur erforderlich, wenn Sie eine
-      Rückmeldung erhalten möchten.</p>
-    <form method="POST" action="https://forms.un-static.com/forms/70546da598b8677382ec7910f74e61c90a47bb33">
-      <p>
-        <label for="email">E-Mail Adresse</label><br>
-        <input type="email" name="email">
-      </p>
-      <p>
-        <label for="nachricht">Ihre Nachricht...</label><br>
-        <textarea name="nachricht" id="textarea" cols="30" rows="5"></textarea>
-      </p>
-      <button class="button" type="submit">Versenden</button>
-    </form>
+        <h2 class="nachrichtgesendet">Ihre Nachricht wurde versendet, vielen Dank!</h2>
+        <p><a href="https://happybirthdayshowhelsinki.github.io/index.html">Zurück zur Startseite</a></p>
   </div>
 
   <script src="styles/jquery-3.4.1.slim.min.js"
