--- a/kontakt/index.html
+++ b/kontakt/index.html
@@ -75,8 +75,8 @@
         target="_blank">CBA-Plattform</a>.</p>
     <p>Bei Fragen oder Feedback freue ich mich auf ihr E-Mail an: <a
         href="mailto:happybirthdayshowhelsinki@gmail.com">happybirthdayshowhelsinki@gmail.com</a></p>
-    <p>Sie können Ihre Nachricht auch direkt hier hinterlassen. Die E-Mail Adresse ist nur erforderlich, wenn Sie eine
-      Rückmeldung erhalten möchten.</p>
+    <p>Sie können Ihre Nachricht auch direkt hier hinterlassen. <i>Die E-Mail Adresse ist nur erforderlich, wenn Sie
+        eine Rückmeldung erhalten möchten.</i></p>
     <form method="POST" action="https://forms.un-static.com/forms/70546da598b8677382ec7910f74e61c90a47bb33">
       <p>
         <label for="email">E-Mail Adresse</label><br>
@@ -84,7 +84,7 @@
       </p>
       <p>
         <label for="nachricht">Ihre Nachricht...</label><br>
-        <textarea name="nachricht" id="textarea" cols="30" rows="5"></textarea>
+        <textarea name="nachricht" id="textarea" cols="30" rows="5" required></textarea>
       </p>
       <button class="button" type="submit">Versenden</button>
     </form>
