--- a/kontakt/index.html
+++ b/kontakt/index.html
@@ -80,11 +80,11 @@
     <form method="POST" action="https://forms.un-static.com/forms/70546da598b8677382ec7910f74e61c90a47bb33">
       <p>
         <label for="email">E-Mail Adresse</label><br>
-        <input type="email" name="email">
+        <input type="email" name="email" placeholder="jemand@example.com">
       </p>
       <p>
         <label for="nachricht">Ihre Nachricht...</label><br>
-        <textarea name="nachricht" id="textarea" cols="30" rows="5" required></textarea>
+        <textarea name="nachricht" id="textarea" cols="30" rows="5" placeholder="Bitte geben Sie hier Ihre Nachricht ein..." required></textarea>
       </p>
       <button class="button" type="submit">Versenden</button>
     </form>
