--- a/nachrichtgesendet/index.html
+++ b/nachrichtgesendet/index.html
@@ -70,7 +70,7 @@
       </div>
     </div>
     <p><a href="https://helsinki.at/program/shows/happy-birthday-show" target="_blank">Hier</a> finden Sie die Happy
-      Birthdayshow auf der Radio Helsinki Homepage.</p>
+      Birthday Show auf der Radio Helsinki Homepage.</p>
     <p>Alle Sendungen zum Nachhören finden Sie auf der <a href="https://cba.fro.at/series/happy-birthday-show"
         target="_blank">CBA-Plattform</a>.</p>
     <p>Bei Fragen oder Feedback freue ich mich auf ihr E-Mail an: <a
