--- a/05082020/index.html
+++ b/05082020/index.html
@@ -27,48 +27,7 @@
 
 <body>
   <div class="content">
-    <h1>Happy Birthday Show</h1>
-    <div class="table">
-      <div class="container">
-        <div class="row">
-          <div class="table-element">
-            <div class="col"><a href="https://happybirthdayshowhelsinki.github.io/index.html">Home</a></div>
-          </div>
-          <div class="table-element">
-            <div class="col">
-              <div class="dropdown">
-                <button onclick="myFunction()" class="dropbtn">Kommende Sendungen</button>
-                <div id="myDropdown" class="dropdown-content">
-                  <a href="https://happybirthdayshowhelsinki.github.io/13052020">13.05.2020</a>
-                  <a href="https://happybirthdayshowhelsinki.github.io/10062020">10.06.2020</a>
-                  <a href="https://happybirthdayshowhelsinki.github.io/08072020">08.07.2020</a>
-                  <a href="https://happybirthdayshowhelsinki.github.io/05082020">05.08.2020</a>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="table-element">
-            <div class="col">
-              <div class="dropdown">
-                <button onclick="myFunction2()" class="dropbtn">Vergangene Sendungen</button>
-                <div id="myDropdown2" class="dropdown-content">
-                  <a href="https://happybirthdayshowhelsinki.github.io/15042020/">15.04.2020</a>
-                  <a href="https://happybirthdayshowhelsinki.github.io/18032020/">18.03.2020</a>
-                  <a href="https://happybirthdayshowhelsinki.github.io/19022020/">19.02.2020</a>
-                  <a href="https://happybirthdayshowhelsinki.github.io/vergangenesendungen/">Weitere</a>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="table-element">
-            <div class="col"><a href="https://happybirthdayshowhelsinki.github.io/galerie/">Galerie</a></div>
-          </div>
-          <div class="table-element">
-            <div class="col"><a href="https://happybirthdayshowhelsinki.github.io/kontakt/">Kontakt</a></div>
-          </div>
-        </div>
-      </div>
-    </div>
+    <div w3-include-html="https://happybirthdayshowhelsinki.github.io/standard.html"></div>
     <h2>Sendung am 05.08.2020</h2>
     <p>Sie können diese Sendung am 05.08.2020 von 18 bis 19 Uhr in Graz auf der Frequenz 92,6 oder im <a
         href="https://live.helsinki.at" target="_blank">Radio Helsinki Livestream</a> hören.</p>
@@ -126,6 +85,39 @@
         }
       }
     }
+  </script>
+
+  <script>
+    function includeHTML() {
+      var z, i, elmnt, file, xhttp;
+      /* Loop through a collection of all HTML elements: */
+      z = document.getElementsByTagName("*");
+      for (i = 0; i < z.length; i++) {
+        elmnt = z[i];
+        /*search for elements with a certain atrribute:*/
+        file = elmnt.getAttribute("w3-include-html");
+        if (file) {
+          /* Make an HTTP request using the attribute value as the file name: */
+          xhttp = new XMLHttpRequest();
+          xhttp.onreadystatechange = function () {
+            if (this.readyState == 4) {
+              if (this.status == 200) { elmnt.innerHTML = this.responseText; }
+              if (this.status == 404) { elmnt.innerHTML = "Page not found."; }
+              /* Remove the attribute, and call this function once more: */
+              elmnt.removeAttribute("w3-include-html");
+              includeHTML();
+            }
+          }
+          xhttp.open("GET", file, true);
+          xhttp.send();
+          /* Exit the function: */
+          return;
+        }
+      }
+    }
+  </script>
+  <script>
+    includeHTML();
   </script>
 </body>
 
