--- a/13052020/index.html
+++ b/13052020/index.html
@@ -34,7 +34,8 @@
         href="https://live.helsinki.at" target="_blank">Radio Helsinki Livestream</a> hören.</p>
     <p><a href="https://helsinki.at/program/98255" target="_blank">Programmhinweis auf der Radio Helsinki Homepage</a>
     </p>
-    <p>Der Inhalt dieser Sendung wurde noch nicht bekannt gegeben. Bitte noch um ein wenig Geduld... &#128521;</p>
+    <p>Heute feiern wir mit Tones and I, Bono von U2, Enrique Iglesias und Janet Jackson. Kaiserin Maria Theresia hat
+      auch heute Geburtstag. Ab heute hat die Happy Birthday Show außerdem einen eigenen Jingle.</p>
   </div>
 
   <script src="styles/jquery-3.4.1.slim.min.js"
