--- a/vergangenesendungen/index.html
+++ b/vergangenesendungen/index.html
@@ -30,9 +30,13 @@
         <h1>Happy Birthday Show</h1>
         <div w3-include-html="https://happybirthdayshowhelsinki.github.io/standard.html"></div>
         <h2>Vergangene Sendungen</h2>
+        <p><a href="https://happybirthdayshowhelsinki.github.io/130502020">13.05.2020</a></p>
         <p><a href="https://happybirthdayshowhelsinki.github.io/15042020">15.04.2020</a></p>
         <p><a href="https://happybirthdayshowhelsinki.github.io/18032020">18.03.2020</a></p>
-        <p><a href="https://happybirthdayshowhelsinki.github.io/19022020">19.02.2020</a></p>
+        <p><span class="datum">19.02.2020:</span><br>Mit Falco, Ed Sheeran, Ava Max und Mabel<br><a
+                href="https://helsinki.at/program/98252" target="_blank">Programmhinweis auf der Radio Helsinki
+                Homepage</a><br><a href="https://cba.fro.at/442050" target="_blank">Sendung zum Nachhören auf der
+                CBA-Plattform</a></p>
         <p><span class="datum">22.01.2020:</span><br>Mit Wincent Weiss, Melendi, Michel Telo und Calvin Harris<br><a
                 href="https://helsinki.at/program/98251" target="_blank">Programmhinweis auf der Radio Helsinki
                 Homepage</a><br><a href="https://cba.fro.at/440141" target="_blank">Sendung zum Nachhören auf der
