--- a/galerie/index.html
+++ b/galerie/index.html
@@ -29,6 +29,7 @@
     <div class="content">
         <h1>Happy Birthday Show</h1>
         <div w3-include-html="https://happybirthdayshowhelsinki.github.io/standard.html"></div>
+        <a href="Christian Steinberger 5.jpg"><img src="Christian Steinberger 5.jpg" class="galerieBilder"></a>
         <a href="Christian Steinberger 4.jpg"><img src="Christian Steinberger 4.jpg" class="galerieBilder"></a>
         <a href="Christian Steinberger 1.jpg"><img src="Christian Steinberger 1.jpg" class="galerieBilder"></a>
         <a href="Christian Steinberger 3.jpeg"><img src="Christian Steinberger 3.jpeg" class="galerieBilder"></a>
