--- a/galerie/index.html
+++ b/galerie/index.html
@@ -29,11 +29,11 @@
     <div class="content">
         <h1>Happy Birthday Show</h1>
         <div w3-include-html="https://happybirthdayshowhelsinki.github.io/standard.html"></div>
-        <a href="Christian Steinberger 5.jpg"><img src="Christian Steinberger 5.jpg" class="galerieBilder"></a>
-        <a href="Christian Steinberger 4.jpg"><img src="Christian Steinberger 4.jpg" class="galerieBilder"></a>
-        <a href="Christian Steinberger 1.jpg"><img src="Christian Steinberger 1.jpg" class="galerieBilder"></a>
-        <a href="Christian Steinberger 3.jpeg"><img src="Christian Steinberger 3.jpeg" class="galerieBilder"></a>
-        <a href="Christian Steinberger 2.JPG"><img src="Christian Steinberger 2.JPG" class="galerieBilder"></a>
+        <a href="christiansteinberger5.jpg"><img src="christiansteinberger5.jpg" class="galerieBilder"></a>
+        <a href="christiansteinberger4.jpg"><img src="christiansteinberger4.jpg" class="galerieBilder"></a>
+        <a href="christiansteinberger1.jpg"><img src="christiansteinberger1.jpg" class="galerieBilder"></a>
+        <a href="christiansteinberger3.jpeg"><img src="christiansteinberger3.jpeg" class="galerieBilder"></a>
+        <a href="christiansteinberger2.JPG"><img src="christiansteinberger2.JPG" class="galerieBilder"></a>
     </div>
 
     <script src="styles/jquery-3.4.1.slim.min.js"
