--- a/index.html
+++ b/index.html
@@ -39,13 +39,13 @@
           </ol>
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img src="Christian Steinberger 5.jpg" class="d-block w-100" alt="Christian Steinberger">
+              <img src="https://happybirthdayshowhelsinki.github.io/galerie/christiansteinberger5.jpg" class="d-block w-100" alt="Christian Steinberger">
             </div>
             <div class="carousel-item">
-              <img src="Christian Steinberger 4.jpg" class="d-block w-100" alt="Christian Steinberger">
+              <img src="https://happybirthdayshowhelsinki.github.io/galerie/christiansteinberger4.jpg" class="d-block w-100" alt="Christian Steinberger">
             </div>
             <div class="carousel-item">
-              <img src="Christian Steinberger 1.jpg" class="d-block w-100" alt="Christian Steinberger">
+              <img src="https://happybirthdayshowhelsinki.github.io/galerie/karusell/christiansteinberger1.jpg" class="d-block w-100" alt="Christian Steinberger">
             </div>
           </div>
           <a class="carousel-control-prev" href="#fotos" role="button" data-slide="prev">
