--- a/10062020/index.html
+++ b/10062020/index.html
@@ -34,7 +34,9 @@
         href="https://live.helsinki.at" target="_blank">Radio Helsinki Livestream</a> hören.</p>
     <p><a href="https://helsinki.at/program/98256" target="_blank">Programmhinweis auf der Radio Helsinki Homepage</a>
     </p>
-    <p>Der Inhalt dieser Sendung wurde noch nicht bekannt gegeben. Bitte noch um ein wenig Geduld... &#128521;</p>
+    <p>Heute feiern wir mit Christina Stürmer, Alle Farben, George Ezra und Robyn. Außerdem haben heute zwei berühmte
+      Schauspieler Geburtstag: Michael J. Fox, zum Beispiel bekannt für seine Rolle in „Zurück in die Zukunft“ und
+      Johnny Depp, er spielte zum Beispiel bei „Fluch der Karibik“ mit.</p>
   </div>
 
   <script src="styles/jquery-3.4.1.slim.min.js"
