--- a/vergangenesendungen/index.html
+++ b/vergangenesendungen/index.html
@@ -33,7 +33,7 @@
         <p><a href="https://happybirthdayshowhelsinki.github.io/10062020">10.06.2020</a></p>
         <p><a href="https://happybirthdayshowhelsinki.github.io/13052020">13.05.2020</a></p>
         <p><a href="https://happybirthdayshowhelsinki.github.io/15042020">15.04.2020</a></p>
-        <p><span class="datum">18.03.2020</span><br>Wiederholung vom 19.02.2020: Mit Falco, Ed Sheeran, Ava Max und
+        <p><span class="datum">18.03.2020:</span><br>Wiederholung vom 19.02.2020: Mit Falco, Ed Sheeran, Ava Max und
             Mabel<br><a href="https://helsinki.at/program/98253" target="_blank">Programmhinweis auf der Radio Helsinki
                 Homepage</a><br><a href="https://cba.fro.at/442050" target="_blank">Sendung zum Nachhören auf der
                 CBA-Plattform</a></p>
