--- a/kontakt/index.html
+++ b/kontakt/index.html
@@ -35,29 +35,64 @@
         target="_blank">CBA-Plattform</a>.</p>
     <p>Bei Fragen oder Feedback freue ich mich auf ihr E-Mail an: <a
         href="mailto:happybirthdayshowhelsinki@gmail.com">happybirthdayshowhelsinki@gmail.com</a></p>
-    <p>Sie können Ihre Nachricht auch direkt hier hinterlassen.<br><i>Die E-Mail Adresse ist nur erforderlich, wenn Sie
-        eine Rückmeldung erhalten möchten.<br>Wenn Sie sich für den Newsletter anmelden möchten, ist der Vorname und die
-        E-Mail Adresse erforderlich.</i></p>
-    <form method="POST" action="https://forms.un-static.com/forms/70546da598b8677382ec7910f74e61c90a47bb33">
-      <p>
-        <label for="Vorname">Vorname</label><br>
-        <input type="text" name="vorname" placeholder="z.B. Max">
-      </p>
-      <p>
-        <label for="email">E-Mail Adresse</label><br>
-        <input type="email" name="email" placeholder="jemand@example.com">
-      </p>
-      <p>
-        <label for="nachricht">Ihre Nachricht...</label><br>
-        <textarea name="nachricht" id="textarea" cols="30" rows="5"
-          placeholder="Bitte geben Sie hier Ihre Nachricht ein..." required></textarea>
-      </p>
-      <p>
-        <input type="checkbox" name="newsletter">
-        <label for="newsletter">Ich möchte mich für den Happy Birthday Show Newsletter anmelden.</label>
-      </p>
-      <button class="button" type="submit">Versenden</button>
-    </form>
+    <div class="row">
+      <div class="col-lg-6">
+        <h2>Ihre Nachricht an die<br>Happy Birthday Show</h2>
+        <p>Die E-Mail Adresse ist nur erforderlich, wenn Sie eine Rückmeldung erhalten möchten.</p>
+        <form method="POST" action="https://forms.un-static.com/forms/70546da598b8677382ec7910f74e61c90a47bb33">
+          <p>
+            <label for="email">E-Mail Adresse</label><br>
+            <input type="email" name="email" placeholder="jemand@example.com">
+          </p>
+          <p>
+            <label for="nachricht">Ihre Nachricht...</label><br>
+            <textarea name="nachricht" id="textarea" cols="30" rows="5"
+              placeholder="Bitte geben Sie hier Ihre Nachricht ein..." required></textarea>
+          </p>
+          <button class="button" type="submit">Versenden</button>
+        </form>
+      </div>
+      <div class="col-lg">
+        <h2 id="zumNewsletterAnmelden">Zum Newsletter anmelden</h2>
+        <p>Sie erhalten vor jeder Sendung eine Erinnerungs-E-Mail.</p>
+        <p>Alle Felder sind erforderlich.</p>
+        <!-- Begin Mailchimp Signup Form -->
+        <!-- <link href="//cdn-images.mailchimp.com/embedcode/classic-10_7.css" rel="stylesheet" type="text/css"> -->
+        <div id="mc_embed_signup">
+          <form
+            action="https://github.us10.list-manage.com/subscribe/post?u=3f2777a6ea3d2d686fe42c4a9&amp;id=0da4f53d1d"
+            method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate"
+            target="_blank" novalidate>
+            <div id="mc_embed_signup_scroll">
+
+              <p>
+              <div class="mc-field-group">
+                <label for="mce-FNAME">Vorname</label><br>
+                <input type="text" value="" name="FNAME" class="required" id="mce-FNAME" placeholder="z.B. Max">
+              </div>
+              </p>
+              <p>
+              <div class="mc-field-group">
+                <label for="mce-EMAIL">E-Mail Addresse</label><br>
+                <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL"
+                  placeholder="jemand@example.com">
+              </div>
+              </p>
+              <div id="mce-responses" class="clear">
+                <div class="response" id="mce-error-response" style="display:none"></div>
+                <div class="response" id="mce-success-response" style="display:none"></div>
+              </div>
+              <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+              <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text"
+                  name="b_3f2777a6ea3d2d686fe42c4a9_0da4f53d1d" tabindex="-1" value=""></div>
+              <div class="clear"><input id="abonnieren" type="submit" value="Abonnieren" name="subscribe"
+                  id="mc-embedded-subscribe"></div>
+            </div>
+          </form>
+        </div>
+        <!--End mc_embed_signup-->
+      </div>
+    </div>
   </div>
 
   <script src="styles/jquery-3.4.1.slim.min.js"
