--- a/08072020/index.html
+++ b/08072020/index.html
@@ -30,10 +30,13 @@
     <h1>Happy Birthday Show</h1>
     <div w3-include-html="https://happybirthdayshowhelsinki.github.io/standard.html"></div>
     <h2>Sendung am 08.07.2020</h2>
-    <p>Sie können diese Sendung am 08.07.2020 von 18 bis 19 Uhr in Graz auf der Frequenz 92,6 oder im <a
-        href="https://live.helsinki.at" target="_blank">Radio Helsinki Livestream</a> hören.</p>
+    <div class="col-md-6">
+      <iframe src="https://cba.fro.at/459325/embed?&waveform=false" width="100%" height="99"
+        style="border:none; width:100%; height:99px;"></iframe>
+    </div>
     <p><a href="https://helsinki.at/program/98257" target="_blank">Programmhinweis auf der Radio Helsinki Homepage</a>
     </p>
+    <p><a href="https://cba.fro.at/459325" target="_blank">Sendung zum Nachhören auf der CBA-Plattform</a></p>
     <p>Heute feiern wir mit Mathea, Post Malone, Dan Reynolds von den Imagine Dragons und Era Istrefi. Vor 161 Jahren
       läuteten die Glocken des Big Ben das erste Mal. Außerdem ist heute Tag der Blaubeeren und Tag der
       Mandelschokolade.</p>
