--- a/05082020/index.html
+++ b/05082020/index.html
@@ -34,7 +34,9 @@
         href="https://live.helsinki.at" target="_blank">Radio Helsinki Livestream</a> hören.</p>
     <p><a href="https://helsinki.at/program/98258" target="_blank">Programmhinweis auf der Radio Helsinki Homepage</a>
     </p>
-    <p>Der Inhalt dieser Sendung wurde noch nicht bekannt gegeben. Bitte noch um ein wenig Geduld... &#128521;</p>
+    <p>Heute feiern wir mit Helene Fischer, Carlos Vives, Shawn Mendes und Geri Halliwell von den Spice Girls. Am 1.
+      August war der Nationalfeiertag der Schweiz, weil die Schweiz am 1. August 1291 gegründet wurde. Außerdem hat Neil
+      Armstrong, der erste Mensch auf dem Mond, heute Geburtstag.</p>
   </div>
 
   <script src="styles/jquery-3.4.1.slim.min.js"
