--- a/kontakt/index.html
+++ b/kontakt/index.html
@@ -61,8 +61,7 @@
         <div id="mc_embed_signup">
           <form
             action="https://github.us10.list-manage.com/subscribe/post?u=3f2777a6ea3d2d686fe42c4a9&amp;id=0da4f53d1d"
-            method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate"
-            target="_blank" novalidate>
+            method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" novalidate>
             <div id="mc_embed_signup_scroll">
 
               <p>
