--- a/kontakt/index.html
+++ b/kontakt/index.html
@@ -39,17 +39,19 @@
       <div class="col-lg-6">
         <h2>Ihre Nachricht an die<br>Happy Birthday Show</h2>
         <p>Die E-Mail Adresse ist nur erforderlich, wenn Sie eine Rückmeldung erhalten möchten.</p>
-        <form method="POST" action="https://forms.un-static.com/forms/70546da598b8677382ec7910f74e61c90a47bb33">
+          <form action="https://api.staticforms.xyz/submit" method="post">
+          <input type="hidden" name="accessKey" value="c4b978db-9696-42ec-8069-04e7d0756157">
           <p>
             <label for="email">E-Mail Adresse</label><br>
             <input type="email" name="email" placeholder="jemand@example.com">
           </p>
           <p>
-            <label for="nachricht">Ihre Nachricht...</label><br>
-            <textarea name="nachricht" id="textarea" cols="30" rows="5"
+            <label for="message">Ihre Nachricht...</label><br>
+            <textarea name="message" id="textarea" cols="30" rows="5"
               placeholder="Bitte geben Sie hier Ihre Nachricht ein..." required></textarea>
           </p>
-          <button class="button" type="submit">Versenden</button>
+          <input type="hidden" name="redirectTo" value="https://happybirthdayshowhelsinki.github.io/nachrichtgesendet">
+          <button class="button" type="submit" value="Submit">Versenden</button>
         </form>
       </div>
       <div class="col-lg">
