--- a/02092020/index.html
+++ b/02092020/index.html
@@ -34,7 +34,9 @@
         href="https://live.helsinki.at" target="_blank">Radio Helsinki Livestream</a> hören.</p>
     <p><a href="https://helsinki.at/program/98259" target="_blank">Programmhinweis auf der Radio Helsinki Homepage</a>
     </p>
-    <p>Der Inhalt dieser Sendung wurde noch nicht bekannt gegeben. Bitte noch um ein wenig Geduld... &#128521;</p>
+    <p>Heute feiern wir mit Freddie Mercury von Queen, Pink Avicii und Namika. Morgen, am 3. September, ist der
+      Nationalfeiertag von San Marino. San Marino ist die älteste noch bestehende Republik der Welt. Außerdem hatte
+      Johann Wolfgang von Goethe am Freitag Geburtstag.</p>
   </div>
 
   <script src="styles/jquery-3.4.1.slim.min.js"
