--- a/30092020/index.html
+++ b/30092020/index.html
@@ -30,10 +30,13 @@
     <h1>Happy Birthday Show</h1>
     <div w3-include-html="https://happybirthdayshowhelsinki.github.io/standard.html"></div>
     <h2>Sendung am 30.09.2020</h2>
-    <p>Sie können diese Sendung am 30.09.2020 von 18 bis 19 Uhr in Graz auf der Frequenz 92,6 oder im <a
-        href="https://live.helsinki.at" target="_blank">Radio Helsinki Livestream</a> hören.</p>
+    <div class="col-md-6">
+      <iframe src="https://cba.fro.at/466775/embed?&waveform=false" width="100%" height="99"
+        style="border:none; width:100%; height:99px;"></iframe>
+    </div>
     <p><a href="https://helsinki.at/program/98260" target="_blank">Programmhinweis auf der Radio Helsinki Homepage</a>
     </p>
+    <p><a href="https://cba.fro.at/466775" target="_blank">Sendung zum Nachhören auf der CBA-Plattform</a></p>
     <p>Heute feiern wir mit Udo Jürgens, Avril Lavigne, Sting und Leigh-Anne Pinnock von Little Mix. Die Schauspielerin
       Julie Andrews hat morgen Geburtstag, sie wurde unter anderem durch ihre Rolle in Mary Poppins bekannt. Außerdem
       ist morgen Tag des Kaffees.</p>
