--- a/25112020/index.html
+++ b/25112020/index.html
@@ -5,6 +5,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+  <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" rel="stylesheet">
+
   <link rel="apple-touch-icon" sizes="180x180"
     href="https://happybirthdayshowhelsinki.github.io/favicon/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32"
@@ -19,7 +21,7 @@
   <meta name="msapplication-config" content="https://happybirthdayshowhelsinki.github.io/favicon/browserconfig.xml">
   <meta name="theme-color" content="#ffffff">
 
-  <title>Sendung am 25.11.2020 | Happy Birthday Show auf Radio Helsinki mit Christian Steinberger</title>
+  <title>XXL-Jubiläumsausgabe am 25.11.2020 | Happy Birthday Show auf Radio Helsinki mit Christian Steinberger</title>
   <link rel="stylesheet" href="/styles/bootstrap.min.css"
     integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
   <link rel="stylesheet" href="/styles/stylesheet.css">
@@ -29,12 +31,17 @@
   <div class="content">
     <h1>Happy Birthday Show</h1>
     <div w3-include-html="https://happybirthdayshowhelsinki.github.io/standard.html"></div>
-    <h2>Sendung am 25.11.2020</h2>
-    <p>Sie können diese Sendung am 25.11.2020 von 18 bis 19 Uhr in Graz auf der Frequenz 92,6 oder im <a
-        href="https://live.helsinki.at" target="_blank">Radio Helsinki Livestream</a> hören.</p>
-    <p><a href="https://helsinki.at/program/98262" target="_blank">Programmhinweis auf der Radio Helsinki Homepage</a>
+    <h2 class="jubilaeum-1 jubilaeum-2 alert alert-success">XXL-Jubiläumsausgabe am 25.11.2020 um 17:30 Uhr</h2>
+    <h3 class="jubilaeum-3">Die Happy Birthday Show wird ein Jahr alt!</h3>
+    <p>Und wenn eine Geburtstags-Sendung Geburtstag hat, dann wird das gebührend gefeiert. Deshalb gibt es am 25.
+      November 2020 eine XXL-Jubiläumsausgabe. Wir beginnen bereits um 17:30 Uhr statt wie normalerweise um 18:00 Uhr
+      und haben somit 90 statt wie üblich 60 Minuten. Neben dem üblichen Programm, also den MusikerInnen die Geburtstag
+      haben, wird es dieses Mal auch ein paar Hintergrundinformationen zur Happy Birthday Show geben. Genauere Inhalte
+      werden noch bekannt gegeben... &#128521;</p>
+    <p><a href="https://helsinki.at/program/100487" target="_blank">Programmhinweis auf der Radio Helsinki Homepage</a>
     </p>
-    <p>Der Inhalt dieser Sendung wurde noch nicht bekannt gegeben. Bitte noch um ein wenig Geduld... &#128521;</p>
+    <p>Sie können die XXL-Jubiläumsausgabe am 25.11.2020 von 17:30 bis 19 Uhr in Graz auf der Frequenz 92,6 oder im <a
+        href="https://live.helsinki.at" target="_blank">Radio Helsinki Livestream</a> hören.</p>
   </div>
 
   <script src="styles/jquery-3.4.1.slim.min.js"
