--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+  <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" rel="stylesheet">
+
   <link rel="apple-touch-icon" sizes="180x180"
     href="https://happybirthdayshowhelsinki.github.io/favicon/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32"
@@ -39,13 +41,16 @@
           </ol>
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img src="https://happybirthdayshowhelsinki.github.io/galerie/christiansteinberger5.jpg" class="d-block w-100" alt="Christian Steinberger">
+              <img src="https://happybirthdayshowhelsinki.github.io/galerie/christiansteinberger5.jpg"
+                class="d-block w-100" alt="Christian Steinberger">
             </div>
             <div class="carousel-item">
-              <img src="https://happybirthdayshowhelsinki.github.io/galerie/christiansteinberger4.jpg" class="d-block w-100" alt="Christian Steinberger">
+              <img src="https://happybirthdayshowhelsinki.github.io/galerie/christiansteinberger4.jpg"
+                class="d-block w-100" alt="Christian Steinberger">
             </div>
             <div class="carousel-item">
-              <img src="https://happybirthdayshowhelsinki.github.io/galerie/karussell/christiansteinberger1kar.jpg" class="d-block w-100" alt="Christian Steinberger">
+              <img src="https://happybirthdayshowhelsinki.github.io/galerie/karussell/christiansteinberger1kar.jpg"
+                class="d-block w-100" alt="Christian Steinberger">
             </div>
           </div>
           <a class="carousel-control-prev" href="#fotos" role="button" data-slide="prev">
@@ -60,6 +65,17 @@
       </div>
     </div>
 
+    <div class="jubilaeum-1 alert alert-success">
+      <h2 class="jubilaeum-2">XXL-Jubiläumsausgabe: 25. November 2020 17:30 Uhr</h2>
+    </div>
+    <h3 class="jubilaeum-3">Die Happy Birthday Show wird ein Jahr alt!</h3>
+    <p>Und wenn eine Geburtstags-Sendung Geburtstag hat, dann wird das gebührend gefeiert. Deshalb gibt es am 25.
+      November 2020 eine XXL-Jubiläumsausgabe. Wir beginnen bereits um 17:30 Uhr statt wie normalerweise um 18:00 Uhr
+      und haben somit 90 statt wie üblich 60 Minuten. Neben dem üblichen Programm, also den MusikerInnen die Geburtstag
+      haben, wird es dieses Mal auch ein paar Hintergrundinformationen zur Happy Birthday Show geben. Mehr zur
+      XXL-Ausgabe
+      finden sie <a href="https://happybirthdayshowhelsinki.github.io/25112020">hier</a>.</p>
+    <div class="torte-div"><img class="torte-img" src="favicon/android-chrome-192x192.png" alt="Happy Birthday"></div>
     <h2 class="firstHeading">Was ist die Happy Birthday Show?</h2>
     <p>Die Happy Birthday Show ist eine Sendung auf Radio Helsinki in Graz, die jeden vierten Mittwoch von 18 bis 19 Uhr
       zu
