--- a/standard.html
+++ b/standard.html
@@ -20,7 +20,7 @@
               <button onclick="myFunction()" class="dropbtn">Kommende Sendungen</button>
               <div id="myDropdown" class="dropdown-content">
                 <a href="https://happybirthdayshowhelsinki.github.io/28102020">28.10.2020</a>
-                <a href="https://happybirthdayshowhelsinki.github.io/25112020"><span class="badge badge-success">!</span> 25.11.2020 <img src="favicon/favicon-32x32.png" alt="!"></a>
+                <a href="https://happybirthdayshowhelsinki.github.io/25112020"><span class="badge badge-success">!</span> 25.11.2020 <img src="https://happybirthdayshowhelsinki.github.io/favicon/favicon-32x32.png" alt="!"></a>
                 <a href="https://happybirthdayshowhelsinki.github.io/23122020">23.12.2020</a>
                 <a href="https://happybirthdayshowhelsinki.github.io/20012021">20.01.2021</a>
               </div>
