--- a/28102020/index.html
+++ b/28102020/index.html
@@ -34,7 +34,9 @@
         href="https://live.helsinki.at" target="_blank">Radio Helsinki Livestream</a> hören.</p>
     <p><a href="https://helsinki.at/program/98261" target="_blank">Programmhinweis auf der Radio Helsinki Homepage</a>
     </p>
-    <p>Der Inhalt dieser Sendung wurde noch nicht bekannt gegeben. Bitte noch um ein wenig Geduld... &#128521;</p>
+    <p>Heute feiern wir mit Katy Perry, Mark Sheehan von The Script, Sigala und Annette Humpe. Der Schauspieler
+      Christopher Lloyd hatte am 22. Oktober Geburtstag, bekannt wurde er als Doc Brown in den drei Teilen von „Zurück
+      in die Zukunft“. Am Montag war außerdem österreichischer Nationalfeiertag.</p>
   </div>
 
   <script src="styles/jquery-3.4.1.slim.min.js"
